# rust-irmf-slicer

./: .gitignore  Cargo.toml  IRMF.md  README.md  VOLUME-TO-IRMF-PLANS.md  test-all.sh
.github/workflows/: rust.yml
binvox-to-irmf/: Cargo.toml  README.md
binvox-to-irmf/src/: main.rs
cal-hardware/: Cargo.toml  README.md
cal-hardware/src/: lib.rs  projection_window.rs  shader.wgsl
cal-optimize/: Cargo.toml  README.md
cal-optimize/src/: backward.wgsl  forward.wgsl  gpu_projector.rs  lib.rs
cal-optimize/tests/: optimization.rs
compress-irmf/: Cargo.toml  README.md
compress-irmf/src/: main.rs
dlp-to-irmf/: Cargo.toml  README.md
dlp-to-irmf/src/: main.rs
examples/001-sphere/: README.md  sphere-1-wgsl.irmf  sphere-cal.irmf
examples/002-cube/: README.md
examples/003-coil-square-face/: README.md
examples/004-coil-circle-face/: README.md
examples/005-cylinder/: README.md
examples/006-square-tetrahedron/: README.md
examples/007-cone/: README.md
examples/008-spiral-square-face/: README.md
examples/009-spiral-circle-face/: README.md
examples/010-tube/: README.md
examples/011-bifilar-coil/: README.md
examples/012-bifilar-electromagnet/: README.md
examples/013-torus/: README.md
examples/014-chain-link/: README.md
examples/015-soapdish/: README.md
examples/016-text/: README.md
examples/017-nostalgia/: README.md
examples/018-rodin-coil/: README.md  rodin-coil-2.irmf  rodin-coil-3.irmf
examples/019-full-color/: README.md
examples/020-quadratic-bezier/: README.md
examples/021-line2d/: README.md
examples/022-superquadrics/: README.md
examples/023-infill/: README.md
examples/024-oloid/: README.md
examples/025-patterns/: README.md
examples/026-utron/: README.md
examples/027-libfive/: README.md
examples/028-lygia/: README.md
examples/029-gsdf-bolt/: README.md
examples/030-gsdf-showerhead/: README.md
examples/031-gsdf-gasket/: README.md
examples/032-gsdf-metric-spacer/: README.md
examples/033-gsdf-npt-flange/: README.md
examples/034-gsdf-plantpot/: README.md
examples/035-the-thinker/: README.md
examples/036-utah-teapot/: README.md  utah-teapot-glsl.irmf  utah-teapot-wgsl.irmf
examples/037-stanford-bunny/: README.md
irmf-cal-cli/: Cargo.toml  README.md
irmf-cal-cli/src/: main.rs
irmf-include-resolver/: Cargo.toml
irmf-include-resolver/src/: lib.rs
irmf-linter/: Cargo.toml  README.md
irmf-linter/src/: main.rs
irmf-output-stl/: Cargo.toml
irmf-output-stl/src/: lib.rs
irmf-output-voxels/: Cargo.toml
irmf-output-voxels/benches/: mc_bench.rs
irmf-output-voxels/src/: binvox_out.rs  gpu_mc.rs  lib.rs  mc.wgsl  photon_out.rs  svx_out.rs  zip_out.rs
irmf-slicer/: Cargo.toml
irmf-slicer-cli/: Cargo.toml
irmf-slicer-cli/src/: main.rs
irmf-slicer/benches/: slicing_bench.rs
irmf-slicer/src/: irmf.rs  lib.rs  mock_renderer.rs  wgpu_renderer.rs
obj-to-irmf/: Cargo.toml  README.md
obj-to-irmf/src/: main.rs
scripts/: bump-minor-version.py  cargo-install-all.sh  cargo-publish-packages.sh  pull-and-push.sh
stl-to-irmf/: Cargo.toml  README.md
stl-to-irmf/src/: main.rs
svx-to-irmf/: Cargo.toml  README.md
svx-to-irmf/src/: main.rs
volume-to-irmf/: Cargo.toml  README.md
volume-to-irmf/src/: lib.rs  octree.wgsl  optimizer.rs  optimizer.wgsl  pass2.wgsl  pass3.wgsl  primitives.rs  sdf.wgsl  volume.rs  voxelizer.wgsl
volume-to-irmf/tests/: irmf_formatting_test.rs  optimizer_test.rs  sdf_test.rs
zip-to-irmf/: Cargo.toml  README.md
zip-to-irmf/src/: main.rs
