[workspace]
resolver = "2"
members = [
    "irmf-slicer",
    "irmf-slicer-cli",
    "irmf-include-resolver",
    "irmf-output-stl",
    "irmf-output-voxels",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Glenn M. Lewis"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmlewis/rust-irmf-slicer"
homepage = "https://irmf.io"
rust-version = "1.92.0"