[workspace]
resolver = "2"
members = [
    "irmf-slicer",
    "irmf-slicer-cli",
    "irmf-include-resolver",
    "irmf-output-stl",
    "irmf-output-voxels",
    "irmf-linter",
    "compress-irmf",
    "volume-to-irmf",
    "binvox-to-irmf",
    "dlp-to-irmf",
    "stl-to-irmf",
    "svx-to-irmf",
    "zip-to-irmf",
    "obj-to-irmf",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Glenn M. Lewis"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmlewis/rust-irmf-slicer"
homepage = "https://irmf.io"
rust-version = "1.85.0"
description = "A slicer for IRMF (Infinite Resolution Materials Format) files"
readme = "README.md"
keywords = ["slicer", "irmf", "3d-printing", "3d-modeling", "cad"]
categories = ["command-line-utilities"]
exclude = ["assets/", "tools/", ".github/", "crates/", "examples/wasm/assets/"]
