[package]
name = "binvox-to-irmf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Convert .binvox files to IRMF shaders"

[dependencies]
volume-to-irmf = { path = "../volume-to-irmf" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
binvox = "0.2"
glam = "0.29"
tokio = { version = "1.38", features = ["full"] }
