[package]
name = "compress-irmf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "A tool to compress IRMF (Infinite Resolution Materials Format) shaders"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
irmf-slicer = { version = "0.3.0", path = "../irmf-slicer" }
anyhow = "1.0"
flate2 = "1.0"
base64 = "0.22"
serde_json = "1.0"
