[package]
name = "dlp-to-irmf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Convert .cbddlp/.photon files to IRMF shaders"

[dependencies]
volume-to-irmf = { version = "0.2.0", path = "../volume-to-irmf" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
glam = "0.29"
zip = "2.1"
tokio = { version = "1.38", features = ["full"] }
