[package]
name = "irmf-cal-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
cal-optimize = { version = "0.4.0", path = "../cal-optimize" }
cal-hardware = { version = "0.4.0", path = "../cal-hardware" }
irmf-slicer = { version = "0.4.0", path = "../irmf-slicer" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
pollster = "0.4"
anyhow = "1.0"
ndarray = "0.16"
winit = { version = "0.30", features = ["rwh_06"] }
indicatif = "0.17"
