[package]
name = "irmf-include-resolver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
