[package]
name = "irmf-output-stl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
irmf-output-voxels = { path = "../irmf-output-voxels" }
irmf-slicer = { path = "../irmf-slicer" }
anyhow = "1.0"
image = "0.25"
pollster = "0.4"
