[package]
name = "irmf-output-stl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
irmf-output-voxels = { version = "0.2.0", path = "../irmf-output-voxels" }
irmf-slicer = { version = "0.2.0", path = "../irmf-slicer" }
anyhow = "1.0"
image = "0.25"
pollster = "0.4"
