[package]
name = "irmf-output-voxels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
zip = "2.2"
image = "0.25"
irmf-slicer = { version = "0.3.0", path = "../irmf-slicer" }
anyhow = "1.0"
chrono = "0.4"
wgpu = "24.0"
futures = "0.3"
pollster = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mc_bench"
harness = false
