[package]
name = "irmf-slicer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
irmf-slicer = { version = "0.1.0", path = "../irmf-slicer" }
irmf-include-resolver = { version = "0.1.0", path = "../irmf-include-resolver", optional = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
irmf-output-stl = { version = "0.1.0", path = "../irmf-output-stl", optional = true }
irmf-output-voxels = { version = "0.1.0", path = "../irmf-output-voxels", optional = true }
minifb = { version = "0.27", optional = true }
image = "0.25"
indicatif = "0.17"

[features]
default = ["view", "stl", "voxels", "remote-includes"]
view = ["dep:minifb"]
stl = ["dep:irmf-output-stl"]
voxels = ["dep:irmf-output-voxels"]
remote-includes = ["dep:irmf-include-resolver"]
