[package]
name = "irmf-slicer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
base64 = "0.22"
image = "0.25"
regex = "1.10"
thiserror = "1.0"
wgpu = "24.0"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.4"
futures = "0.3"
glam = "0.29"
