[package]
name = "volume-to-irmf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "A library for converting 3D volumes to optimized IRMF shaders"
readme = "README.md"

[dependencies]
wgpu = "24.0"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
anyhow = "1.0"
image = "0.25"
rayon = "1.10"
irmf-slicer = { version = "0.3.0", path = "../irmf-slicer" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pollster = "0.4"
rand = "0.8"
stl_io = "0.7"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }
